@@ -21,7 +21,7 @@ Vx=3;
 P=1;
 T=sqr(Vx/Mx)/(gamma*R);
 
-mf=1.0;
+mf=3.0;
 tf=1.0;
 
 is=1;  js=1; 
@@ -128,10 +128,10 @@ Disc(
     AVERAGING=AVERAGING_ROE;
     AOWENO_TYPE=AOWENO_TYPE_COMPRESSIVE;
     AOWENO_gammalo=0.95;
-    AOWENO_gammahi=0.9999;
-    INTERPOL=INTERPOL_AOWENO9;
+    AOWENO_gammahi=0.95;
+    INTERPOL=INTERPOL_AOWENO7;
     EIGENVALCOND=EIGENVALCOND_PECLET; 
-    FACEINTEG=FACEINTEG_CENTRAL3;
+    FACEINTEG=FACEINTEG_CENTRAL1;
   );
   FVS(
     AOWENO_TYPE=AOWENO_TYPE_COMPRESSIVE;
