@@ -58,7 +58,7 @@ Flux Reconstruction Schemes
 AIAA JOURNAL Vol. 53, No. 9, September 2015
 }
 
-mf=1; 
+mf=2; 
 
 Re=1600;
 M=0.1;
@@ -199,9 +199,9 @@ Disc(
     FLUX=FLUX_FDS;
     AVERAGING=AVERAGING_ROE;
     AOWENO_TYPE=AOWENO_TYPE_COMPRESSIVE;
-    AOWENO_gammalo=0.95;
-    AOWENO_gammahi=0.99999;
-    INTERPOL=INTERPOL_AOWENO7;
+    AOWENO_gammalo=0.999999;
+    AOWENO_gammahi=0.999999;
+    INTERPOL=INTERPOL_AOWENO9;
     EIGENVALCOND=EIGENVALCOND_GNOFFO;
     FACEINTEG=FACEINTEG_CENTRAL3;
   );
